--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable(list ./list/list.c ./list/main.c)
 
 add_executable(string ./string/string.c ./string/main.c)
 
+add_executable(linklist ./linkList/linklist.c ./linkList/main.c ./list/list.c)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
