栈与队列实现

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -11,6 +11,12 @@ add_executable(string ./string/string.c ./string/main.c)
 
 add_executable(linklist ./linkList/linklist.c ./linkList/main.c ./list/list.c)
 
+add_executable(deque ./linkList/linklist.c ./list/list.c ./deque/deque.c ./deque/main.c )
+
+add_executable(stack ./linkList/linklist.c ./list/list.c ./stack/stack.c ./stack/main.c )
+
+add_executable(btree ./linkList/linklist.c ./list/list.c ./stack/stack.c ./bTree/main.c ./bTree/btree.c ./deque/deque.c )
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
